# ZestCode

./: .clangd  .gitignore  Makefile  arm-none-eabi.txt  common.mk  compile_commands.json  meson.build  v5.ini  v5.toml
.github/workflows/: build.yml
docs/: CONTRIBUTING.md  STRUCTURE.md  TOOLCHAIN.md
firmware/: linkerscript.ld  v5-common.ld  v5.ld
include/: api.h  kapi.h  main.h
include/common/: cobs.h  gid.h  linkedlist.h  result.hpp  result_impl.hpp  set.h  string2.h
include/pros/: apix.hpp  colors.h  colors.hpp  competition.hpp  llemu.h  llemu.hpp  misc.h  misc.hpp  rtos.h  rtos.hpp  screen.h  screen.hpp
include/pros/devices/: adi_expander.hpp  battery.hpp  brain.hpp  devices.hpp  port.hpp  screen.hpp
include/rtos/: FreeRTOSConfig.h  message_buffer.h  semphr.h  task.h  timers.h
include/system/: hot.h  user_functions.h
include/system/dev/: usd.hpp  vfs.hpp
include/system/user_functions/: c_list.h  cpp_list.h  list.h
include/system/vfs/: file_descriptor.hpp  file_driver.hpp  file_flags.hpp  usd.hpp  usd_driver.hpp  vfs.h  vfs.hpp
include/vdml/: port.h  registry.h  registry.hpp  vdml.h  vdml.hpp
scripts/: .clangd  get_files.py  patch_clangd.py  v5.ini  v5.ld
src/: competition.cpp
src/common/: cobs.c  gid.c  linkedlist.c  string.c
src/devices/: battery.c  battery.cpp  brain.cpp  competition.cpp  controller.c  devices.cpp  port.cpp  registry.c  screen.c  screen.cpp  vdml.c  vdml.cpp  vdml.hpp  vdml_adi.c  vdml_ai_vision.c  vdml_ai_vision.cpp  vdml_device.c  vdml_device.cpp  vdml_distance.c  vdml_distance.cpp  vdml_ext_adi.c  vdml_gps.c  vdml_gps.cpp  vdml_imu.c  vdml_imu.cpp  vdml_link.c  vdml_link.cpp  vdml_motors.c  vdml_motors.cpp  vdml_optical.c  vdml_optical.cpp  vdml_registry.cpp  vdml_rotation.c  vdml_rotation.cpp  vdml_serial.c  vdml_serial.cpp  vdml_usd.c  vdml_vision.c  vdml_vision.cpp
src/rtos/: heap_4.c  list.c  port.c  queue.c  semphr.c  stream_buffer.c  tasks.c  timers.c
src/system/: competition.hpp  cpp_support.cpp  envlock.c  hot.c  mlock.c  rtos_hooks.c  startup.cpp  stubs.cpp  system_daemon.c  system_daemon.cpp  system_daemon.hpp  unwind.c  user_functions.c
src/system/dev/: dev_driver.c  file_system_stubs.c  ser_daemon.c  ser_driver.c  usd.cpp  usd_driver.c  vfs.c  vfs.cpp
src/system/vfs/: file_system_stubs.c  ser_daemon.c  ser_driver.c  usd.cpp  usd_driver.c  usd_driver.cpp  vfs.c  vfs.cpp
src/tests/: exceptions.cpp
subprojects/: v5.wrap  v5rt.wrap
tests/: Result.cpp  competition_task.cpp  errno_reentrancy.c  result.cpp  unwind.cpp
tests/examples/: basic.cpp
